--- a/index.html
+++ b/index.html
@@ -8,13 +8,12 @@
 </head>
 <body>
   <section class="container">
-    <div class="content">
     <h1>WELCOME</h1>
-    <p>Esta página ha sido visitada <span id="contadorVisitas">0</span> veces.</p>
-    <button id="btnReestablecer">Reestablecer Contador</button>
+    <div class="content">
+    <p class="text">Esta página ha sido visitada <span id="contadorVisitas" class="contador">0</span> veces.</p>
+    <button id="btnReestablecer" class="btn">Reestablecer Contador</button>
     </div>
   </section>
-    
-    <script src="./js/script.js"></script>
+  <script src="./js/script.js"></script>
 </body>
 </html>
